--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,11 +1,22 @@
 server:
   port: 80
 
+muhammeturls:
+  urun:
+    save: ${urun_save}
+    update: ${urun_update}
+    delete: "/delete"
+    findall: "/findall"
+  musteri:
+    save: "/save"
+
+
+
 spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/Eticaret
-    username: postgres
-    password: 123
+    username: ${POSTGRE_USER}
+    password: ${POSTGRE_PASSWORD}
     driver-class-name: org.postgresql.Driver
   jpa:
     show-sql: true
