--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 80
+  port: 8080
 
 muhammeturls:
   urun:
@@ -15,8 +15,8 @@ muhammeturls:
 spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/Eticaret
-    username: ${POSTGRE_USER}
-    password: ${POSTGRE_PASSWORD}
+    username: postgres
+    password: root
     driver-class-name: org.postgresql.Driver
   jpa:
     show-sql: true
